--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="sub1">
       <img src="a.jpg.jpg" alt="b.jpg" width=90>
       <h4>WALLPAPER</h4>
-      <p>Select a good wallpaper for peace of mind</p>
+      <p>Select a good wallpaper for peace of mind dhvb.</p>
 
     </div>
     <div class="sub1">
